--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <header>
+        <div class="topnav-container">
+            <div class="gamer-logo-content">
+                <img src="images/Frame.png" alt="">
+                <h1><span class="gamer-first-letter">G</span>amer</h1>
+            </div>
+            <div class="gamer-list-content"></div>
+        </div>
+    </header>
+    <main></main>
+    <footer></footer>
     
 </body>
 </html>
