--- a/index.html
+++ b/index.html
@@ -14,16 +14,48 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <header>
+    <!--This Is Top Logo and Nav section-->
+    <header class="header">
         <div class="topnav-container">
             <div class="gamer-logo-content">
                 <img src="images/Frame.png" alt="">
                 <h1><span class="gamer-first-letter">G</span>amer</h1>
             </div>
-            <div class="gamer-list-content"></div>
+            <div class="gamer-list-content">
+                <div class="gamerlist-item"><a href="">About Us</a></div>
+                <div class="gamerlist-item"><a href="">Developers</a></div>
+
+                <div class="gamerlist-item-three">
+                    <div class="list-item-inside-list-one"><a href="">Follow Us On</a></div>
+                    <div class="list-item-inside-list"><a href=""><img src="youtube (3).png" alt=""></a></div>
+                    <div class="list-item-inside-list-tiktok"><a href=""><img src="tik-tok.png" alt=""></a></div>
+                </div>
+            </div>
         </div>
     </header>
-    <main></main>
+    <!--this is main section-->
+    <main>
+        <section class="goat-section">
+            <div class="GOAT-container">
+                <div class="goat-content">
+                    <div class="goat-content-inside">    
+                    <h3>Play Like The</h3>
+                    <h2>G.O.A.T.</h2>
+                    <p>1-Click instant play</p>
+                    <p>No Download</p>
+                    <p>1000s of supported online games</p>
+                    <div class="botton-contain">
+                        <button class="btn-primary">Sign In</button>
+                        <button class="btn-primary-two">Go Rogue</button>
+                    </div>
+                    </div>
+                </div>
+                <div class="goat-image">
+                    <img src="images/Group 18.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
     
 </body>
