--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
                     <div class="goat-content-inside">    
                     <h3>Play Like The</h3>
                     <h2>G.O.A.T.</h2>
-                    <p>1-Click instant play</p>
-                    <p>No Download</p>
-                    <p>1000s of supported online games</p>
+                    <p><span class="goat-blog-icon"><img src="icon/play.png" alt=""></span> 1-Click instant play</p>
+
+                    <p><span class="goat-blog-icon"><img src="icon/download.png" alt=""></span> No Download</p>
+
+                    <p><span class="goat-blog-icon"><img src="icon/group.png" alt=""></span> 1000s of supported online games</p>
+                    
                     <div class="botton-contain">
                         <button class="btn-primary">Sign In</button>
                         <button class="btn-primary-two">Go Rogue</button>
