my start gamer commit

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <p><span class="goat-blog-icon"><img src="icon/download.png" alt=""></span> No Download</p>
 
                     <p><span class="goat-blog-icon"><img src="icon/group.png" alt=""></span> 1000s of supported online games</p>
-                    
+
                     <div class="botton-contain">
                         <button class="btn-primary">Sign In</button>
                         <button class="btn-primary-two">Go Rogue</button>
@@ -55,6 +55,21 @@
                 </div>
                 <div class="goat-image">
                     <img src="images/Group 18.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!--this is We are Gamer Section-->
+        <section>
+            <div class="we-are-container">
+                <div class="we-are-image">
+                    <img src="images/pngwing 4.png" alt="">
+                </div>
+                <div class="we-are-content">
+                    <h1>We are gamer</h1>
+                    <p>An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                    <button class="btn-primary">know more</button>
+                    <h2>Our purpose...</h2>
+                    <h1>“unleash the gamer in everyone”</h1>
                 </div>
             </div>
         </section>
