my gamer happy commit

--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
             </div>
         </section>
         <!--this is We are Gamer Section-->
-        <section>
+        <section class="we-are-gamer-section">
             <div class="we-are-container">
                 <div class="we-are-image">
                     <img src="images/pngwing 4.png" alt="">
                 </div>
                 <div class="we-are-content">
-                    <h1>We are gamer</h1>
-                    <p>An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
-                    <button class="btn-primary">know more</button>
-                    <h2>Our purpose...</h2>
-                    <h1>“unleash the gamer in everyone”</h1>
+                    <h1 class="we-game-header">We are gamer</h1>
+                    <p class="gamer-blog">An international digital games and entertainment<br>company. We develop, publish and distribute multiplayer<br>mobile games. We reach over 400 million players each<br>month and our audience keeps growing.</p>
+                    <button class="btn-primary-three">know more</button>
+                    <h4 class="game-second-head">Our purpose...</h4>
+                    <h1 class="game-last-head">“unleash the gamer in everyone”</h1>
                 </div>
             </div>
         </section>
