my happy Instanly Done

--- a/index.html
+++ b/index.html
@@ -73,6 +73,22 @@
                 </div>
             </div>
         </section>
+        <!--this is Play Instantly Section-->
+        <section class="instantly-section">
+            <div class="anniversary-container">
+                <div class="anniversary-content">
+                    <h5 class="anniversary-headline"><span class="anniversary-headline-firstline">Play Instantly,</span><br>No Downloads<br>
+                        No Installs.</h5>
+                    <p class="anniversary-blog">Play games online for free without<br>downloading. Just click the Play button<br>and play instantly in your browser.</p>
+                </div>
+                <div class="anniversary-image">
+                    <img src="images/Rectangle 55.png" alt="">
+                    <div class="anniversary-second-image">
+                        <img src="images/Rectangle 66.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
     
