my happy commit

--- a/index.html
+++ b/index.html
@@ -76,6 +76,35 @@
                 </div>
             </div>
         </section>
+        <!--this Funny video section-->
+        <section>
+            <div class="funny-container">
+                <h1 class="funny-header-content">Online Games <span class="funny-header-second-line">Funny Videos</span></h1>
+                <p class="funn-blog-content">A Collection of Hilarious Videos to Brighten Your Day</p>
+                <div class="video-container">
+                    <div class="video-sector"><img title="Watch Now"
+                        src="images/Rectangle 4.png" alt="">
+                        <p class="video-down-blog">No Download. No Installs. Play games Instantly on Gamer.</p>
+                    </div>
+                    <div class="video-sector">
+                        <img title="Watch Now" src="images/Rectangle 5.png" alt="">
+                        <p class="video-down-blog">Did you score? #unblockedgames #school</p>
+                        
+                    </div>
+                    <div class="video-sector"><img
+                        title="Watch Now"
+                         src="images/Rectangle 6.png" alt="">
+                        <p class="video-down-blog">Breaking game records like OG</p>
+                        
+                    </div>
+                    <div class="video-sector"><img
+                        title="Watch Now"
+                         src="images/Rectangle 7.png" alt="">
+                        <p class="video-down-blog">Busted gaming on school laptop, but you are still lit.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!--this is Play Instantly Section-->
         <section class="instantly-section">
             <div class="anniversary-container">
