my footer start commit

--- a/index.html
+++ b/index.html
@@ -141,7 +141,38 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <!--this is footer section-->
+    <footer class="footer">
+        <div class="fot-container">
+            <div class="fot-log-container">
+                <div class="fot-image"><img src="images/Frame.png" alt=""></div>
+                <div class="fot-head"><h1><span class="fot-first-letter">G</span>amer</h1></div>
+            </div>
+            <div class="list-container">
+                <li><a href="">Our Story</a></li>
+                <li><a href="">Games</a></li>
+                <li><a href="">Web Games</a></li>
+                <li><a href="">Careers</a></li>
+                <li><a href="">Support</a></li>
+                <li><a href="">My Account</a></li>
+            </div>
+            <div class="fot-icon-container">
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+            </div>
+            <div class="fot-last-list-container">
+                <li><a href="">Terms and Conditions</a></li>
+                <li><a href="">Privacy Policy</a></li>
+                <li><a href="">Cookie Policy</a></li>
+                <li><a href="">Privacy Settings</a></li>
+            </div>
+            <p class="copyright-text">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+        </div>
+    </footer>
     
 </body>
 </html>
