my final and last happy commit

--- a/index.html
+++ b/index.html
@@ -149,26 +149,37 @@
                 <div class="fot-head"><h1><span class="fot-first-letter">G</span>amer</h1></div>
             </div>
             <div class="list-container">
-                <li><a href="">Our Story</a></li>
-                <li><a href="">Games</a></li>
-                <li><a href="">Web Games</a></li>
-                <li><a href="">Careers</a></li>
-                <li><a href="">Support</a></li>
-                <li><a href="">My Account</a></li>
+                <div class="list-first-content">
+                    <li><a href="">Our Story</a></li>
+                    <li><a href="">Games</a></li>
+                    <li><a href="">Web Games</a></li>
+                </div>
+                <div class="list-second-content">
+                    <li><a href="">Careers</a></li>
+                    <li><a href="">Support</a></li>
+                    <li><a href="">My Account</a></li>
+                </div>
             </div>
             <div class="fot-icon-container">
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
+                <div class="fot-icon-first-content">
+                    <a href=""><img src="icon/twitter (2).png" alt=""></a>
+                    <a href=""><img src="icon/facebook.png" alt=""></a>
+                    <a href=""><img src="icon/youtube (3).png" alt=""></a></div>
+                <div class="fot-icon-second-content">
+                    <a href=""><img src="icon/linkedin (1).png" alt=""></a>
+                    <a href=""><img src="icon/instagram (2).png" alt=""></a>
+                    <a href=""><img src="icon/apple (1).png" alt=""></a></div>
             </div>
             <div class="fot-last-list-container">
-                <li><a href="">Terms and Conditions</a></li>
-                <li><a href="">Privacy Policy</a></li>
+                <div class="fot-last-list-first-content">
+                    <li><a href="">Terms and Conditions</a></li>
+                    <li><a href="">Privacy Policy</a></li>
+                </div>
+                <div class="fot-last-list-second-content">
+                    
                 <li><a href="">Cookie Policy</a></li>
                 <li><a href="">Privacy Settings</a></li>
+                </div>
             </div>
             <p class="copyright-text">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
         </div>
